--- a/DarkNewsNuMI.yml
+++ b/DarkNewsNuMI.yml
@@ -3,20 +3,8 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - bzip2=1.0.8=h99b78c6_7
-  - ca-certificates=2024.8.30=hf0a4a13_0
-  - libffi=3.4.2=h3422bc3_5
-  - libsqlite=3.46.1=hc14010f_0
-  - libzlib=1.3.1=h8359307_2
-  - ncurses=6.5=h7bae524_1
-  - openssl=3.3.2=h8359307_0
-  - pip=24.2=pyh8b19718_1
-  - python=3.10.15=hdce6c4c_2_cpython
-  - readline=8.2=h92ec313_1
-  - setuptools=75.1.0=pyhd8ed1ab_0
-  - tk=8.6.13=h5083fa2_1
-  - wheel=0.44.0=pyhd8ed1ab_0
-  - xz=5.2.6=h57fd34a_0
+  - pip=24.2
+  - python=3.10.15
   - pip:
       - anyio==4.6.2.post1
       - appnope==0.1.4
@@ -145,4 +133,3 @@ dependencies:
       - widgetsnbextension==4.0.13
       - xxhash==3.5.0
       - zipp==3.20.2
-prefix: /Users/user/miniconda3/envs/DarkNews_clean
